--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,11 @@ include_directories(${CMAKE_SOURCE_DIR})
 include_directories(/usr/local/include)
 message("###${CMAKE_SOURCE_DIR}")
 
+link_directories(/usr/local/lib)
+
+#include_directories(/Users/yangbo/Downloads/mysql-8.0.30-macos12-arm64/include)
+#link_directories(/Users/yangbo/Downloads/mysql-8.0.30-macos12-arm64/lib)
+
 add_executable(cppbatis
         main.cpp
         connection/connection_pool.h
