--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,9 +5,11 @@ set(CMAKE_CXX_STANDARD 20)
 
 include_directories(${CMAKE_SOURCE_DIR})
 include_directories(/usr/local/include)
+include_directories(/usr/local/jsoncpp-1.9.5/include)
 message("###${CMAKE_SOURCE_DIR}")
 
 link_directories(/usr/local/lib)
+
 
 #include_directories(/Users/yangbo/Downloads/mysql-8.0.30-macos12-arm64/include)
 #link_directories(/Users/yangbo/Downloads/mysql-8.0.30-macos12-arm64/lib)
@@ -19,6 +21,7 @@ add_executable(cppbatis
         connection/connection.h
         connection/singleton_base.h
         prepare_stmt/prepare_stmt.h
-        data_struct/user.h)
+        data_struct/user.h
+        reflection/easy_json.h data_struct/test.h)
 
-target_link_libraries(cppbatis mysqlclient)
+target_link_libraries(cppbatis mysqlclient jsoncpp)
