新增 update 操作接口，支持insert&update

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,8 @@ project(cppbatis)
 
 set(CMAKE_CXX_STANDARD 20)
 
+# add_definitions("-Wall -g")
+
 # 基础依赖
 include_directories(${CMAKE_SOURCE_DIR})
 include_directories(/usr/local/include)
